# dustin-img-2-vid

./: .env.vps.example  .gitignore  README.md  docker-compose.vps.yml  docker-compose.yml  package-lock.json  package.json  run.ps1  setup.ps1
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  setup.ps1
apps/api/app/: config.py  deps.py  main.py  models.py
apps/api/app/routers/: account.py  features.py  jobs.py  media.py  options.py  prompts.py  utils.py  webhooks.py
apps/api/app/services/: grok_client.py  jobs.py  pixverse_client.py
apps/api/data/: jobs.sqlite3
apps/api/pixverse_studio_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_generation_options.py  test_generation_validation.py  test_job_status_mapping.py  test_job_store_persistence.py  test_pixverse_client_upload.py  test_settings.py
apps/web/: .dockerignore  Dockerfile  index.html  package.json  run.ps1  setup.ps1  vite.config.ts  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css  types.ts
docs/: integration-matrix.md
